[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/Default.tres" type="Theme" id=1]
[ext_resource path="res://menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://menu/ChooseInput.tscn" type="PackedScene" id=3]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="MarginContainer" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_right = 79.0
margin_bottom = 40.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Title"]
margin_top = 8.0
margin_right = 158.0
margin_bottom = 32.0
text = "Prototype Fighter"

[node name="Buttons" type="MarginContainer" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = -59.0
margin_right = 78.5
margin_bottom = 59.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Main/Buttons"]
margin_right = 157.0
margin_bottom = 118.0
custom_constants/separation = 20

[node name="VsPlayer" type="Button" parent="Main/Buttons/List"]
margin_right = 157.0
margin_bottom = 26.0
text = "Player VS Player"

[node name="VsCPU" type="Button" parent="Main/Buttons/List"]
margin_top = 46.0
margin_right = 157.0
margin_bottom = 72.0
text = "Player VS CPU"

[node name="Training" type="Button" parent="Main/Buttons/List"]
margin_top = 92.0
margin_right = 157.0
margin_bottom = 118.0
text = "Training"

[node name="Options" type="MarginContainer" parent="Main"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.0
margin_top = -104.0
margin_right = 59.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="CheckButton" parent="Main/Options"]
margin_right = 118.0
margin_bottom = 40.0
pressed = true
text = "Music"

[node name="ChooseInput" parent="." instance=ExtResource( 3 )]
visible = false
margin_bottom = 44.0
